load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//lw/net:__subpackages__"])

cc_library(
  name = "tls_client",
  hdrs = ["tls_client.h"],
  srcs = ["tls_client.cpp"],
  deps = [
    "//lw/err",
    "//lw/err:system",
    "//lw/memory:buffer",
    "//lw/memory:buffer_view",
    "//third_party/openssl",
  ],
)

cc_test(
  name = "tls_client_test",
  srcs = ["tls_client_test.cpp"],
  deps = [
    ":tls_client",
    ":tls_context",
    "@gtest//:gtest_main",
    "//lw/memory:buffer",
    "//lw/memory:buffer_view",
    "//lw/net:tls_options",
    "//lw/net/testing:tls_credentials",
  ],
)

cc_library(
  name = "tls_context",
  hdrs = ["tls_context.h"],
  srcs = ["tls_context.cpp"],
  deps = [
    ":tls_client",
    "//lw/err",
    "//lw/err:system",
    "//lw/net:tls_options",
    "//third_party/openssl",
  ],
)

cc_test(
  name = "tls_context_test",
  srcs = ["tls_context_test.cpp"],
  deps = [
    ":tls_context",
    "@gtest//:gtest_main",
    "//lw/net:tls_options",
    "//lw/net/testing:tls_credentials",
  ],
)
