load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//lw/net:__subpackages__"])

cc_library(
    name = "errors",
    srcs = ["errors.cpp"],
    hdrs = ["errors.h"],
    deps = [
        "//lw/err",
        "//lw/err:system",
        "@boringssl//:ssl",
    ],
)

cc_library(
    name = "tls_client",
    srcs = ["tls_client.cpp"],
    hdrs = ["tls_client.h"],
    deps = [
        ":errors",
        "//lw/err",
        "//lw/memory:buffer",
        "//lw/memory:buffer_view",
        "@boringssl//:ssl",
    ],
)

cc_test(
    name = "tls_client_test",
    srcs = ["tls_client_test.cpp"],
    deps = [
        ":tls_client",
        ":tls_context",
        "//lw/memory:buffer",
        "//lw/memory:buffer_view",
        "//lw/net:tls_options",
        "//lw/net/testing:tls_credentials",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "tls_context",
    srcs = ["tls_context.cpp"],
    hdrs = ["tls_context.h"],
    deps = [
        ":errors",
        ":tls_client",
        "//lw/net:tls_options",
        "@boringssl//:ssl",
    ],
)

cc_test(
    name = "tls_context_test",
    srcs = ["tls_context_test.cpp"],
    deps = [
        ":tls_context",
        "//lw/net:tls_options",
        "//lw/net/testing:tls_credentials",
        "@googletest//:gtest_main",
    ],
)
