load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = [
        "//lw/http:__subpackages__",
        "//lw/net:__subpackages__",
    ],
)

cc_library(
    name = "mock_router",
    testonly = True,
    hdrs = ["mock_router.h"],
    deps = [
        "//lw/net:router",
        "@googletest//:gtest",
    ],
)

filegroup(
    name = "tls_credential_files",
    testonly = True,
    srcs = [
        "test.cert.pem",
        "test.key.pem",
    ],
)

cc_library(
    name = "tls_credentials",
    testonly = True,
    hdrs = ["tls_credentials.h"],
    data = [":tls_credential_files"],
)
