load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//lw/grpc:__subpackages__"])

proto_library(
  name = "greeter_service_proto",
  srcs = ["greeter_service.proto"],
  testonly = True,
)

cc_proto_library(
  name = "greeter_service_cc_proto",
  deps = [":greeter_service_proto"],
  testonly = True,
)

cc_grpc_library(
  name = "greeter_service_cc_grpc",
  srcs = [":greeter_service_proto"],
  deps = [":greeter_service_cc_proto"],
  grpc_only = True,
  testonly = True,
)
